changing the upload style

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -297,3 +297,17 @@ body {
 .tag-select{
   width:20%;
 }
+
+
+/**user edit**/
+.upload-area{
+  border: 1px dashed;
+  width: 100%;
+  line-height: 150px;
+  display: table;
+  text-align: center;
+  p{
+    display: table-cell;
+    vertical-align: middle;
+  }
+}
