--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -250,3 +250,15 @@ body {
 .tag-select {
   width: 20%;
 }
+/**user edit**/
+.upload-area {
+  border: 1px dashed;
+  width: 100%;
+  line-height: 150px;
+  display: table;
+  text-align: center;
+}
+.upload-area p {
+  display: table-cell;
+  vertical-align: middle;
+}
