--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -303,11 +303,33 @@ body {
 .upload-area{
   border: 1px dashed;
   width: 100%;
-  line-height: 150px;
+  margin-bottom:5px;
+  line-height: 50px;
   display: table;
   text-align: center;
   p{
     display: table-cell;
     vertical-align: middle;
   }
+}
+.middle{
+  line-height: 80px;
+  vertical-align: middle;
+}
+#dropzone.in {
+  width: 100%;
+  height: 200px;
+  line-height: 200px;
+  font-size: larger;
+}
+#dropzone.hover {
+  background: @grey;
+}
+#dropzone.fade {
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+  opacity: 1;
 }
