--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -300,7 +300,7 @@ body {
 
 
 /**user edit**/
-.upload-area{
+.drag-area{
   border: 1px dashed;
   width: 100%;
   margin-bottom:5px;
@@ -312,10 +312,17 @@ body {
     vertical-align: middle;
   }
 }
+
+.maigin-left-right-15{
+  margin-left:15px;
+  margin-right:15px;
+}
+
 .middle{
-  line-height: 80px;
+  line-height: 30px;
   vertical-align: middle;
 }
+
 #dropzone.in {
   width: 100%;
   height: 200px;
