change face to thumbnail

--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -20,7 +20,7 @@ block content
                     input(id='face-id',type='hidden',name='faceId', value='#{user.faceId}')
                     div.col-md-2
 
-                            img(class='img-polaroid img-rounded',id='image-face',src='',alt='头像')
+                            img(class='img-thumbnail',id='image-face',src='',alt='头像')
 
                             p
                             p
