--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -116,4 +116,4 @@ block content
 
 
 
-    script(data-main='/javascripts/app/post.js',src='/javascripts/require.js?v=#{appVersion}')
+    script(data-main='/javascripts/app/user-edit.js',src='/javascripts/require.js?v=#{appVersion}')
