--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -88,7 +88,8 @@ block content
                         div.row
                             div(id='upload-div',class='col-md-11 col-sm-11 well well-sm fade maigin-left-right-15')
 
-
+                        div.row
+                            div(id='tip-area',class='col-md-8 col-sm-8')
 
                     div.modal-footer
                         p
