--- a/app/views/layouts/_head.jade
+++ b/app/views/layouts/_head.jade
@@ -50,7 +50,7 @@ header(class='navbar navbar-default navbar-inverse navbar-fixed-top',role='banne
                 else
                     li.dropdown
                             a(class='dropdown-toggle', href='#', data-toggle='dropdown')
-                                img(src='#{user.mini}',class='img-rounded')
+                                img(src='#{user.mini}',class='mini-face')
                                 | &nbsp; #{user.name} &nbsp;
                                 b.caret
 
