--- a/app/views/home/post-content-bone.jade
+++ b/app/views/home/post-content-bone.jade
@@ -4,7 +4,7 @@ script(type="text/template",id="item-template")
         div.col-md-7
             div.media
                 a('href=/users/<%- creator._id %>',class='pull-left')
-                    img('src=<%- creator.thumbnails %>',class='img-rounded img-thumbnail')
+                    img('src=<%- creator.thumbnails %>',class='img-rounded img-thumbnail thumbnail-face')
                 div.media-body
                     h5.media-heading
                         p.padding-top5
