--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -58,7 +58,7 @@ block content
                                 each user, i in users
                                     span
                                         a(href='/users/#{user._id}',name='new-member-link',data-toggle='tooltip',title='#{user.name}')
-                                            img(class='img-circle img-thumbnail img-responsive small-face',src='#{user.thumbnails}',alt='#{user.name}')
+                                            img(class='img-circle img-thumbnail img-responsive tini-face',src='#{user.thumbnails}',alt='#{user.name}')
 
                                     | &nbsp;
         script(data-main='/build/app/home',src='/javascripts/require.js?v=#{appVersion}')
