--- a/app/views/users/show.jade
+++ b/app/views/users/show.jade
@@ -18,7 +18,7 @@ block content
                         tr
                            td 头像
                            td
-                              img(src='#{user.thumbnails}',class='img-polaroid img-rounded')
+                              img(src='#{user.normalFace}',class='img-polaroid img-rounded small-face')
                         tr
                            td 用户名
                            td #{user.name}
