--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -118,4 +118,4 @@ block content
 
 
 
-    script(data-main='/javascripts/app/user-edit.js',src='/javascripts/require.js?v=#{appVersion}')
+    script(data-main='/build/app/user-edit.js',src='/javascripts/require.js?v=#{appVersion}')
