--- a/public/stylesheets/application-all.css
+++ b/public/stylesheets/application-all.css
@@ -11757,6 +11757,10 @@ body {
 .ie9-tip {
   margin-top: 50px;
 }
+.up-down {
+  float: left;
+  margin-left: 10px;
+}
 .li-width {
   width: 100%;
   word-break: break-all;
