--- a/app/views/users/user-blogs.jade
+++ b/app/views/users/user-blogs.jade
@@ -7,7 +7,7 @@ block content
         
         div.row
             div.col-md-2.col-sm-2
-                img(src='#{discoverior.normalFace}',class='img-rounded img-thumbnail img-responsive')
+                img(src='#{discoverior.normalFace}',class='img-rounded img-thumbnail img-responsive small-face')
                 p
                 p 我的名字： #{discoverior.name}
                 p 注册时间： #{discoverior.regTimeStr}
