remove some redundant code

--- a/app/views/layouts/_footer.jade
+++ b/app/views/layouts/_footer.jade
@@ -1,4 +1,4 @@
 hr
 div.container
   footer
-    p &copy; Company 2012 All Rights Reseved. Build for all love in the world
+    p &copy; Company 2012 All Rights Reseved. Build for all love in the world  #{environment}
