--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -20,7 +20,7 @@ block content
 
                     div(class='tab-content')
                         div(class='tab-pane active',id='new')
-                            div(id='posts',class='padding-top20')
+                            div(id='new-content',class='padding-top20')
                                 
                                
                         div(class='tab-pane fade',id='discover')
