change home page nav

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -61,4 +61,4 @@ block content
                                             img(class='img-circle img-thumbnail img-responsive tini-face',src='#{user.thumbnails}',alt='#{user.name}')
 
                                     | &nbsp;
-        script(data-main='/javascripts/app/home',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='/build/app/home',src='/javascripts/require.js?v=#{appVersion}')
