--- a/app/views/posts/show.jade
+++ b/app/views/posts/show.jade
@@ -77,7 +77,7 @@ block content
                     hr
 
 
-        script(data-main='/build/app/post-show',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='/javascripts/app/post-show',src='/javascripts/require.js?v=#{appVersion}')
 
 
 
