--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -76,6 +76,7 @@ block content
 
                                             div(id='posts',class='padding-top20')
                                                 textarea(id='editor-area',class='form-control content-editor-div', name='content',rows='10',placeholder='最多2000字符',type='text',maxlength='2000',required,data-validation-maxlength-message='内容不能超过2000个字符！')
+                                                div(id='thumb-area')
                                                 p.text-info.upload-area
                                                     | 拖动文件到此区域上传 或点击 &nbsp;&nbsp;&nbsp;
                                                     span(class='btn btn-sm btn-info fileinput-button')
@@ -95,7 +96,7 @@ block content
         script(type="text/template",id="image-item-template")
             div.row
                 div(name='display-area',class='col-md-3 col-sm-4.col-xs-2 thumb')
-                    div.aa
+
                 div.col-md-4.col-sm-3.col-xs-5
                     p.middle
                         span(class='badge',id='file-info-label') 文件名
@@ -104,11 +105,18 @@ block content
                         span(class='badge',id='file-info-label') 大小
                         | &nbsp;&nbsp; <%- size %>
                         <br/>
-                        button(name='upload-cancel-btn',class='btn btn-danger') 取消
+                        button(name='upload-cancel-btn',class='btn btn-sm btn-danger') 取消
                 div.col-md-5
                     div(id='progress-container')
                         div(class='progress progress-striped active')
                             div(id='progress-bar',class='progress-bar progress-bar-success',role='progressbar',aria-valuenow='0',aria-valuemin='0',aria-valuemax='100',style='width: 0%')
+        <!-- Templates -->
+        script(type="text/template",id="thumbnail-item-template")
+            div.thumb-image
+                a
+                   img('src=<%- thumbnailUrl %>',class='img-rounded img-thumbnail thumbnail-face')
+
+
         <!-- guide dialog -->
         div(id='guide-makedown',class='modal fade', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
             div.modal-dialog.width70percent
