upload image testing

--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -265,6 +265,15 @@ body {
   margin-top:0;
   padding:5px;
 }
+.thumb-image{
+  float: left;
+  padding: 5px;
+}
+.display-image-area{
+  border:1px solid #f5f5f5;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 
 /**user edit**/
 .drag-area{
@@ -325,4 +334,8 @@ body {
 .face(@width: 20px,@height:20px) {
   width: @width;
   height: @height;
+}
+/**post image**/
+.image-post-thumbnail{
+  width:80px;
 }
