--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -76,19 +76,19 @@ block content
 
                                             div(id='posts',class='padding-top20')
                                                 textarea(id='editor-area',class='form-control content-editor-div', name='content',rows='10',placeholder='最多2000字符',type='text',maxlength='2000',required,data-validation-maxlength-message='内容不能超过2000个字符！')
-                                                div(id='thumb-area')
-                                                p.text-info.upload-area
+                                                p(id='dropzone',class='text-info upload-area')
                                                     | 拖动文件到此区域上传 或点击 &nbsp;&nbsp;&nbsp;
                                                     span(class='btn btn-sm btn-info fileinput-button')
                                                         span 添加文件...
                                                         input(type='file',name='files',id='fileupload',multiple)
-                                                div(id='image-area')
-
-
-
                                         div(class='tab-pane',id='preview')
                                             div(id='preview-content',class='preview-content-div')
-                                                
+                        div(class='row display-image-area')
+                            div(id='thumb-area',class='col-md-12')
+                        div(class='row')
+                            div(id='image-area',class='col-md-12')
+
+
                                 
                     div.form-group
                         button(id='submit-btn', type='submit',class='btn btn-success') 发言
@@ -113,10 +113,23 @@ block content
         <!-- Templates -->
         script(type="text/template",id="thumbnail-item-template")
             div.thumb-image
-                a
-                   img('src=<%- thumbnailUrl %>',class='img-rounded img-thumbnail thumbnail-face')
+                p
+                    a
+                       img('src=<%- thumbnailUrl %>',class='img-thumbnail image-post-thumbnail')
 
-
+                p
+                    a(name='delete',class='btn btn-danger btn-xs') 删除
+        <!-- Templates -->
+        script(type="text/template",id="image-model-template")
+            input(type='hidden',name='name','value=<%= name %>')
+            input(type='hidden',name='size','value=<%= size %>')
+            input(type='hidden',name='type','value=<%= type %>')
+            input(type='hidden',name='deleteType','value=<%= deleteType %>')
+            input(type='hidden',name='deleteUrl','value=<%= deleteUrl %>')
+            input(type='hidden',name='url','value=<%= url %>')
+            input(type='hidden',name='thumbnailUrl','value=<%= thumbnailUrl %>')
+            input(type='hidden',name='smallUrl','value=<%= smallUrl %>')
+            input(type='hidden',name='miniUrl','value=<%= miniUrl %>')
         <!-- guide dialog -->
         div(id='guide-makedown',class='modal fade', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
             div.modal-dialog.width70percent
