--- a/public/stylesheets/application-all.css
+++ b/public/stylesheets/application-all.css
@@ -10578,6 +10578,15 @@ body {
   margin-top: 0;
   padding: 5px;
 }
+.thumb-image {
+  float: left;
+  padding: 5px;
+}
+.display-image-area {
+  border: 1px solid #f5f5f5;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 /**user edit**/
 .drag-area {
   border: 1px dashed;
@@ -10632,4 +10641,8 @@ body {
 .mini-face {
   width: 20px;
   height: 20px;
+}
+/**post image**/
+.image-post-thumbnail {
+  width: 80px;
 }
