--- a/app/assets/stylesheets/application.less
+++ b/app/assets/stylesheets/application.less
@@ -267,7 +267,9 @@ body {
 }
 .thumb-image{
   float: left;
-  padding: 5px;
+  padding-right: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 .display-image-area{
   border:1px solid #f5f5f5;
